@@ -938,6 +938,7 @@ extern int kill_job_by_part_name(char *part_name)
 	struct job_record  *job_ptr;
 	struct part_record *part_ptr;
 	int job_count = 0;
+	time_t now = time(NULL);
 
 	part_ptr = find_part_record (part_name);
 	if (part_ptr == NULL)	/* No such partition */
@@ -952,7 +953,9 @@ extern int kill_job_by_part_name(char *part_name)
 
 		if (job_ptr->job_state == JOB_SUSPENDED)
 			suspended = true;
-		if ((job_ptr->job_state == JOB_RUNNING) || suspended) {
+		if ((job_ptr->job_state == JOB_RUNNING) 
+		    || (job_ptr->job_state == JOB_PENDING)
+		    || suspended) {
 			job_count++;
 			info("Killing job_id %u on defunct partition %s",
 			     job_ptr->job_id, part_name);
@@ -964,6 +967,15 @@ extern int kill_job_by_part_name(char *part_name)
 				job_ptr->end_time = time(NULL);
 			job_completion_logger(job_ptr);
 			deallocate_nodes(job_ptr, false, suspended);
+		} else if (job_ptr->job_state == JOB_PENDING) {
+			job_count++;
+			info("Killing job_id %u on defunct partition %s",
+				job_ptr->job_id, part_name);
+			job_ptr->job_state	= JOB_CANCELLED;
+			job_ptr->start_time	= now;
+			job_ptr->end_time	= now;
+			job_ptr->exit_code	= 1;
+			job_completion_logger(job_ptr);
 		}
 
 	}
