@@ -133,7 +133,7 @@ make_bash_script $file_in "
   exit 123"
 set job_id1 0
 set job_id2 0
-set srun_pid [spawn $srun -N1-6 --output=$file_out --batch -t1 $file_in]
+set srun_pid [spawn $srun -N1-6 --output=$file_out --comment=test --batch -t1 $file_in]
 expect {
 	-re "jobid ($number) submitted" {
 		set job_id1 $expect_out(1,string)
