@@ -125,6 +125,10 @@ documents those changes that are of interest to users and admins.
  - Fix logic to execute a batch job step (under an existing resource 
    allocation) as needed by LSF.
  - Patches from Hongjia Cao (pmi finialize issues and type declaration)
+ - In sched/wiki2, enclose a job's COMMENT value in double quotes.
+ - Delete pending job if it's associated partition is deleted.
+ - fix for handling batch steps completing correctly and setting the 
+   return code.
 
 * Changes in SLURM 1.1.20
 =========================
